fix(drawer): fix drawer layout issue
- Fix the problem when `modal` set to false, the drawer will not be able to show.

--- a/packages/theme-chalk/src/drawer.scss
+++ b/packages/theme-chalk/src/drawer.scss
@@ -111,7 +111,7 @@
 $directions: rtl, ltr, ttb, btt;
 
 @include b(drawer) {
-  position: absolute;
+  position: fixed;
   box-sizing: border-box;
   background-color: $--dialog-background-color;
   display: flex;
